Fix welcome section background color on mobile.

--- a/stylesheets/page.scss
+++ b/stylesheets/page.scss
@@ -666,7 +666,7 @@ button.inherited {
 
 	@include tablet {
 		#welcome {
-			background: none;
+			background-image: none;
 		}
 
 		#welcome h1,
